WebGL context image buffer accumulates the NativeImage contents when drawn to RemoteImageBufferProxy https://bugs.webkit.org/show_bug.cgi?id=226813 <rdar://77421966>

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-06-11
Reviewed by Simon Fraser.

Source/WebCore:

Add a workaround to flush WebGL element image buffer before
every new frame in order to clear the WebContent process side
NativeImage caches.

Test: webgl/draw-webgl-to-context2d-memory-test.html

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::paintRenderingResultsToCanvas):

LayoutTests:

Add a test that should crash on some devices with low
memory limits.

* webgl/draw-webgl-to-context2d-memory-test-expected.txt: Added.
* webgl/draw-webgl-to-context2d-memory-test.html: Added.

Canonical link: https://commits.webkit.org/238717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278756 268f45cc-cd09-0410-ab3c-d52691b4dbfc