Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp
@@ -1218,6 +1218,10 @@ void WebGLRenderingContextBase::paintRenderingResultsToCanvas()
             auto& base = canvasBase();
             base.clearCopiedImage();
             m_markedCanvasDirty = false;
+            // FIXME: Remote ImageBuffers do not flush the buffers that are drawn to a buffer.
+            // Avoid leaking the WebGL content in the cases where a WebGL canvas element is drawn to a Context2D
+            // canvas element repeatedly.
+            base.buffer()->flushDrawingContext();
             m_context->paintCompositedResultsToCanvas(*base.buffer());
         }
         return;
@@ -1232,7 +1236,10 @@ void WebGLRenderingContextBase::paintRenderingResultsToCanvas()
     base.clearCopiedImage();
 
     m_markedCanvasDirty = false;
-
+    // FIXME: Remote ImageBuffers do not flush the buffers that are drawn to a buffer.
+    // Avoid leaking the WebGL content in the cases where a WebGL canvas element is drawn to a Context2D
+    // canvas element repeatedly.
+    base.buffer()->flushDrawingContext();
     m_context->paintRenderingResultsToCanvas(*base.buffer());
 }
 
